--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!-- Halaman Pertama: Input Nama -->
   <div class="page active" id="startPage">
     <h1>Just4You</h1>
-    <p>Masukkan nama anda untuk mula:</p>
+    <p>Aippp!Tulis dulu nama hehe >.<:</p>
 
     <div class="name-input-container">
       <input type="text" id="userName" placeholder="Masukkan nama...">
