--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <div class="page" id="finalPage">
     <div class="final-page">
       <img src="last.jpg" alt="Hadiah">
-      <p>Maaf sebab me mulakan relay kita dengan sakitkan hati ikall.Me sayangg mu sangat ii.Me taknakk ulang lagi.Me mintaa maaf sangat ii.Selamat hari jadii muu.Me nakk teman muu dari sekarang sampaii mu berjaya.Taknakk sedih ii tauu.Jangan jadi macam birthday me haritu tau hehehe.Me nak mu happyyy.Jangan risau me takk dendam dengan mu pon.Me takpernah dendam or benci mu..Me sayang muu sangat ii..Tataaa</p>
+      <p>Maaf sebab me mulakan relay kita dengan sakitkan hati ikall.Me sayangg mu sangat ii.Me taknakk ulang lagi.Me mintaa maaf sangat ii.Selamat hari jadii muu.Me nakk teman muu dari sekarang sampaii mu berjaya.Taknakk sedih ii tauu..Me nak mu happyyy..Me sayang muu sangat ii..Tataaa</p>
     </div>
   </div>
 
